fix: ?좎＜臾??묒? ????깅줉 ??以묐났 移댁슫??吏묎퀎 ?뺥솗??媛쒖꽑
- 諛깆뿏?? 以묐났 ??ぉ???뺥솗???꾪꽣留곹븯??skippedCount 怨꾩궛
- ?꾨줎?몄뿏?? API ?묐떟??skipped 媛믪쓣 ?뺥솗???쒖떆?섎룄濡??섏젙 (?대갚 濡쒖쭅 異붽?)
- ?좎＜臾??곹뭹 愿??湲곕뒫 媛쒖꽑 諛?踰덉뿭 ?낅뜲?댄듃

--- a/src/i18n/locales/de/categoriesPage.json
+++ b/src/i18n/locales/de/categoriesPage.json
@@ -90,5 +90,6 @@
   "sheetNotFound": "Notenblatt nicht gefunden.",
   "loginRequired": "Bitte melden Sie sich an, um fortzufahren.",
   "favoriteError": "Beim Verarbeiten der Favoriten ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
-  "addedToCart": "Erfolgreich in den Warenkorb hinzugefügt!"
+  "addedToCart": "Erfolgreich in den Warenkorb hinzugefügt!",
+  "viewDetails": "Details anzeigen"
 }
