--- a/src/i18n/locales/hi/categoriesPage.json
+++ b/src/i18n/locales/hi/categoriesPage.json
@@ -90,5 +90,6 @@
   "sheetNotFound": "शीट म्यूजिक नहीं मिला।",
   "loginRequired": "जारी रखने के लिए कृपया लॉगिन करें।",
   "favoriteError": "पसंदीदा प्रसंस्करण के दौरान एक त्रुटि हुई। कृपया पुनः प्रयास करें।",
-  "addedToCart": "कार्ट में सफलतापूर्वक जोड़ा गया!"
+  "addedToCart": "कार्ट में सफलतापूर्वक जोड़ा गया!",
+  "viewDetails": "विवरण देखें"
 }
