--- a/src/i18n/locales/hi/sheetDetail.json
+++ b/src/i18n/locales/hi/sheetDetail.json
@@ -69,5 +69,18 @@
   "refundPolicyDescription": "यह उत्पाद एक डिजिटल PDF ड्रम शीट म्यूजिक फ़ाइल है। एक बार फ़ाइल डाउनलोड या एक्सेस हो जाने के बाद, इसे रिफंड नहीं किया जा सकता है।",
   "refundPolicyLink": "रिफंड और डिलीवरी नीति",
   "refundPolicyLinkText": "विवरण के लिए, कृपया हमारी जांच करें",
-  "refundPolicyLinkSuffix": ""
+  "refundPolicyLinkSuffix": "",
+  "description": "विवरण",
+  "preorderAddToCart": "प्री-ऑर्डर को कार्ट में जोड़ें",
+  "preorderBuyNow": "प्राथमिकता उत्पादन का अनुरोध करें",
+  "preorderPlaceholder": {
+    "title": "वर्तमान में उत्पादन कतार में शीट संगीत",
+    "description": "ऑर्डर करने पर प्राथमिकता के साथ उत्पादित किया जाएगा।",
+    "subtitle": "प्री-ऑर्डर उत्पाद"
+  },
+  "preorderNotice": {
+    "title": "📦 प्री-ऑर्डर उत्पाद सूचना",
+    "description": "यह शीट संगीत एक प्री-ऑर्डर उत्पाद है। भुगतान पूरा होते ही ट्रांसक्रिप्शन कार्य शुरू हो जाएगा, और हम इसे जितनी जल्दी हो सके पूरा करेंगे। कार्य पूरा होने पर, आप इसे मेरा पेज (खरीदारी इतिहास) से तुरंत डाउनलोड कर सकते हैं, और आप वास्तविक समय प्रगति स्थिति की भी जांच कर सकते हैं।"
+  }
+}
 }
