--- a/src/i18n/locales/ko/sheetDetail.json
+++ b/src/i18n/locales/ko/sheetDetail.json
@@ -69,7 +69,19 @@
   "refundPolicyDescription": "본 상품은 디지털 PDF 드럼 악보 파일로, 파일 다운로드 또는 열람이 이루어진 경우 환불이 불가합니다.",
   "refundPolicyLink": "환불 및 제공(배송) 정책",
   "refundPolicyLinkText": "자세한 내용은",
-  "refundPolicyLinkSuffix": "을 확인해 주세요."
+  "refundPolicyLinkSuffix": "을 확인해 주세요.",
+  "description": "상세 설명",
+  "preorderAddToCart": "선주문 장바구니 담기",
+  "preorderBuyNow": "우선 제작 신청하기",
+  "preorderPlaceholder": {
+    "title": "현재 제작 대기 중인 악보입니다",
+    "description": "주문 시 우선적으로 제작됩니다.",
+    "subtitle": "선주문 상품"
+  },
+  "preorderNotice": {
+    "title": "📦 선주문 상품 안내",
+    "description": "본 악보는 선주문 상품입니다. 결제 완료 즉시 채보 작업이 시작되며, 최대한 빠르게 완성해 드립니다. 작업이 완료되면 마이페이지(구매내역)에서 바로 다운로드하실 수 있으며, 실시간 진행 상황도 확인 가능합니다."
+  }
 }
 
 
