--- a/src/i18n/locales/ru/categoriesPage.json
+++ b/src/i18n/locales/ru/categoriesPage.json
@@ -90,5 +90,6 @@
   "sheetNotFound": "Ноты не найдены.",
   "loginRequired": "Пожалуйста, войдите, чтобы продолжить.",
   "favoriteError": "Произошла ошибка при обработке избранного. Пожалуйста, попробуйте снова.",
-  "addedToCart": "Успешно добавлено в корзину!"
+  "addedToCart": "Успешно добавлено в корзину!",
+  "viewDetails": "Просмотреть Детали"
 }
