--- a/src/i18n/locales/ru/sheetDetail.json
+++ b/src/i18n/locales/ru/sheetDetail.json
@@ -69,5 +69,17 @@
   "refundPolicyDescription": "Этот продукт является цифровым файлом партитуры для барабанов в формате PDF. После того, как файл был скачан или доступен, он не может быть возвращен.",
   "refundPolicyLink": "Политика Возврата и Доставки",
   "refundPolicyLinkText": "Для деталей, пожалуйста, проверьте нашу",
-  "refundPolicyLinkSuffix": ""
+  "refundPolicyLinkSuffix": "",
+  "description": "Описание",
+  "preorderAddToCart": "Добавить Предзаказ в Корзину",
+  "preorderBuyNow": "Запросить Приоритетное Производство",
+  "preorderPlaceholder": {
+    "title": "Партитура в очереди на производство",
+    "description": "Будет произведена с приоритетом при заказе.",
+    "subtitle": "Товар Предзаказа"
+  },
+  "preorderNotice": {
+    "title": "📦 Уведомление о Товаре Предзаказа",
+    "description": "Эта партитура является товаром предзаказа. Работа по транскрипции начинается немедленно после оплаты, и мы завершим её как можно быстрее. После завершения работы вы можете сразу скачать её со Моей Страницы (История Покупок), а также проверить статус прогресса в реальном времени."
+  }
 }
