--- a/src/i18n/locales/th/categoriesPage.json
+++ b/src/i18n/locales/th/categoriesPage.json
@@ -90,5 +90,6 @@
   "sheetNotFound": "ไม่พบแผ่นเพลง",
   "loginRequired": "กรุณาเข้าสู่ระบบเพื่อดำเนินการต่อ",
   "favoriteError": "เกิดข้อผิดพลาดขณะประมวลผลรายการโปรด กรุณาลองอีกครั้ง",
-  "addedToCart": "เพิ่มลงตะกร้าเรียบร้อยแล้ว!"
+  "addedToCart": "เพิ่มลงตะกร้าเรียบร้อยแล้ว!",
+  "viewDetails": "ดูรายละเอียด"
 }
