--- a/src/i18n/locales/th/sheetDetail.json
+++ b/src/i18n/locales/th/sheetDetail.json
@@ -69,5 +69,17 @@
   "refundPolicyDescription": "ผลิตภัณฑ์นี้เป็นไฟล์แผ่นเพลงกลอง PDF ดิจิทัล เมื่อไฟล์ถูกดาวน์โหลดหรือเข้าถึงแล้ว จะไม่สามารถคืนเงินได้",
   "refundPolicyLink": "นโยบายการคืนเงินและการจัดส่ง",
   "refundPolicyLinkText": "สำหรับรายละเอียด กรุณาตรวจสอบ",
-  "refundPolicyLinkSuffix": ""
+  "refundPolicyLinkSuffix": "",
+  "description": "คำอธิบาย",
+  "preorderAddToCart": "เพิ่มการสั่งซื้อล่วงหน้าในตะกร้า",
+  "preorderBuyNow": "ขอการผลิตแบบลำดับความสำคัญ",
+  "preorderPlaceholder": {
+    "title": "แผ่นเพลงอยู่ในคิวการผลิต",
+    "description": "จะถูกผลิตด้วยลำดับความสำคัญเมื่อสั่งซื้อ",
+    "subtitle": "สินค้าสั่งซื้อล่วงหน้า"
+  },
+  "preorderNotice": {
+    "title": "📦 แจ้งเตือนสินค้าสั่งซื้อล่วงหน้า",
+    "description": "แผ่นเพลงนี้เป็นสินค้าสั่งซื้อล่วงหน้า งานถอดเพลงจะเริ่มทันทีหลังจากการชำระเงิน และเราจะทำให้เสร็จโดยเร็วที่สุด เมื่องานเสร็จแล้วคุณสามารถดาวน์โหลดได้ทันทีจากหน้าของฉัน (ประวัติการซื้อ) และยังสามารถตรวจสอบสถานะความคืบหน้าแบบเรียลไทม์ได้"
+  }
 }
