--- a/src/i18n/locales/uk/categoriesPage.json
+++ b/src/i18n/locales/uk/categoriesPage.json
@@ -90,5 +90,6 @@
   "sheetNotFound": "Ноти не знайдено.",
   "loginRequired": "Будь ласка, увійдіть, щоб продовжити.",
   "favoriteError": "Під час обробки обраного сталася помилка. Будь ласка, спробуйте ще раз.",
-  "addedToCart": "Успішно додано до кошика!"
+  "addedToCart": "Успішно додано до кошика!",
+  "viewDetails": "Переглянути Деталі"
 }
