--- a/src/i18n/locales/uk/sheetDetail.json
+++ b/src/i18n/locales/uk/sheetDetail.json
@@ -69,5 +69,18 @@
   "refundPolicyDescription": "Цей продукт є цифровим файлом нот для барабанів у форматі PDF. Після того, як файл був завантажений або доступний, він не може бути повернений.",
   "refundPolicyLink": "Політика Повернення та Доставки",
   "refundPolicyLinkText": "Для деталей, будь ласка, перевірте нашу",
-  "refundPolicyLinkSuffix": ""
+  "refundPolicyLinkSuffix": "",
+  "description": "Опис",
+  "preorderAddToCart": "Додати Передзамовлення до Кошика",
+  "preorderBuyNow": "Запросити Пріоритетне Виробництво",
+  "preorderPlaceholder": {
+    "title": "Ноти зараз у черзі на виробництво",
+    "description": "Буде вироблено з пріоритетом при замовленні.",
+    "subtitle": "Товар Передзамовлення"
+  },
+  "preorderNotice": {
+    "title": "📦 Повідомлення про Товар Передзамовлення",
+    "description": "Ці ноти є товаром передзамовлення. Робота з транскрипції починається негайно після оплати, і ми завершимо її якомога швидше. Після завершення роботи ви можете одразу завантажити її з Моєї Сторінки (Історія Покупок), а також перевірити статус прогресу в реальному часі."
+  }
+}
 }
