--- a/src/i18n/locales/ko/categoriesPage.json
+++ b/src/i18n/locales/ko/categoriesPage.json
@@ -91,6 +91,7 @@
   "sheetNotFound": "악보를 찾을 수 없습니다.",
   "loginRequired": "계속하려면 로그인이 필요합니다.",
   "favoriteError": "찜하기 처리 중 오류가 발생했습니다. 다시 시도해주세요.",
-  "addedToCart": "장바구니에 추가되었습니다!"
+  "addedToCart": "장바구니에 추가되었습니다!",
+  "viewDetails": "상세보기"
 }
 
