--- a/src/i18n/locales/hi/checkout.json
+++ b/src/i18n/locales/hi/checkout.json
@@ -37,5 +37,7 @@
   "securePayment": "SSL एन्क्रिप्टेड सुरक्षित भुगतान",
   "poweredBy": "{{provider}} द्वारा संचालित",
   "creditDebitWallets": "क्रेडिट/डेबिट कार्ड & वॉलेट",
-  "localCardsSupported": "+ स्थानीय कार्ड समर्थित"
+  "localCardsSupported": "+ स्थानीय कार्ड समर्थित",
+  "preorderConsentTitle": "आपकी टोकरी में पूर्व-आदेश वस्तुएं शामिल हैं।",
+  "preorderConsentDescription": "पूर्व-आदेश वस्तुएं भुगतान के तुरंत बाद 1:1 कस्टम ट्रांसक्रिप्शन कार्य शुरू करती हैं, इसलिए साधारण मन बदलने के कारण ऑर्डर रद्दीकरण और धनवापसी संभव नहीं है। क्या आप इससे सहमत हैं?"
 }
