--- a/src/i18n/locales/ru/checkout.json
+++ b/src/i18n/locales/ru/checkout.json
@@ -37,5 +37,7 @@
   "securePayment": "Безопасная оплата с шифрованием SSL",
   "poweredBy": "Работает на {{provider}}",
   "creditDebitWallets": "Кредитная/Дебетовая карта & Кошельки",
-  "localCardsSupported": "+ Поддержка местных карт"
+  "localCardsSupported": "+ Поддержка местных карт",
+  "preorderConsentTitle": "Ваша корзина содержит товары предзаказа.",
+  "preorderConsentDescription": "Товары предзаказа начинают персонализированную транскрипцию 1:1 сразу после оплаты, поэтому отмена заказов и возвраты средств из-за простой смены мнения невозможны. Вы согласны с этим?"
 }
