--- a/src/i18n/locales/th/checkout.json
+++ b/src/i18n/locales/th/checkout.json
@@ -37,5 +37,7 @@
   "securePayment": "การชำระเงินที่ปลอดภัยด้วยการเข้ารหัส SSL",
   "poweredBy": "ให้บริการโดย {{provider}}",
   "creditDebitWallets": "บัตรเครดิต/เดบิต & กระเป๋าเงินดิจิทัล",
-  "localCardsSupported": "+ รองรับบัตรท้องถิ่น"
+  "localCardsSupported": "+ รองรับบัตรท้องถิ่น",
+  "preorderConsentTitle": "ตะกร้าของคุณมีสินค้าสั่งซื้อล่วงหน้า",
+  "preorderConsentDescription": "สินค้าสั่งซื้อล่วงหน้าจะเริ่มงานถอดโน้ตแบบกำหนดเอง 1:1 ทันทีหลังการชำระเงิน ดังนั้นการยกเลิกคำสั่งซื้อและการคืนเงินเนื่องจากเปลี่ยนใจจึงเป็นไปไม่ได้ คุณยินยอมกับเรื่องนี้หรือไม่?"
 }
