--- a/src/i18n/locales/uk/checkout.json
+++ b/src/i18n/locales/uk/checkout.json
@@ -37,5 +37,7 @@
   "securePayment": "Безпечна оплата з шифруванням SSL",
   "poweredBy": "Працює на {{provider}}",
   "creditDebitWallets": "Кредитна/Дебетова картка & Гаманці",
-  "localCardsSupported": "+ Підтримка місцевих карток"
+  "localCardsSupported": "+ Підтримка місцевих карток",
+  "preorderConsentTitle": "Ваш кошик містить товари попереднього замовлення.",
+  "preorderConsentDescription": "Товари попереднього замовлення починають персоналізовану транскрипцію 1:1 одразу після оплати, тому скасування замовлень та повернення коштів через просту зміну думки неможливі. Ви згодні з цим?"
 }
