--- a/src/i18n/locales/ko/checkout.json
+++ b/src/i18n/locales/ko/checkout.json
@@ -38,5 +38,7 @@
   "poweredBy": "{{provider}} 제공",
   "removeItem": "삭제",
   "creditDebitWallets": "신용/체크카드 & 간편결제",
-  "localCardsSupported": "+ 지역 카드 지원"
+  "localCardsSupported": "+ 지역 카드 지원",
+  "preorderConsentTitle": "장바구니에 선주문 상품이 포함되어 있습니다.",
+  "preorderConsentDescription": "선주문 상품은 결제 즉시 1:1 맞춤 채보가 시작되므로 단순 변심에 의한 주문 취소 및 환불이 불가능합니다. 이에 동의하십니까?"
 }
